--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,17 @@
 {% extends 'layout.html' %}
 {% block content %}
 
-
+<h2 class="text-center">Enter a nickname to begin chatting!</h2>
+<div class="row">
+    <div class="col offset-md-3 offset-lg-4 col-md-6 col-lg-4">
+        <form action="{{ url_for('login_user') }}" method="get" class="p-3">
+            <div class="form-group">
+                <input type="text" class="form-control" id="nickname" name="nickname" minlength="5"
+                       placeholder="Silly nick goes here..." value="{{ session.get('user') }}">
+                <button type="submit" class="btn btn-success btn-block mt-2">Start chatting!</button>
+            </div>
+        </form>
+    </div>
+</div>
 
 {% endblock %}
