--- a/static/style.css
+++ b/static/style.css
@@ -2,11 +2,7 @@ body {
     height: 100%;
 }
 
-p {
-    white-space: pre-wrap;
-}
-
-.card, p, form {
+.card, textarea, form {
     border: lightgrey solid 1px;
     border-radius: 5px;
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2),
@@ -29,5 +25,14 @@ p {
     box-shadow: grey 1px 1px 3px;
     padding: 1px;
     border: lightgrey solid 1px;
-    margin-bottom: 2px;
+    margin-bottom: 5px;
+}
+
+textarea {
+    width: 100%;
+    height: 100%;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+    resize: none;
 }
