Changed textarea to editable <p>.

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="col-lg-5 col ml-2">
-        <textarea id="editable-text" class="p-3">{{ paragraph_text }}</textarea>
+        <p id="editable-text" class="p-3" contenteditable="true">{{ paragraph_text }}</p>
     </div>
 
 </div>
