--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@ body {
     height: 100%;
 }
 
-.card, textarea, form {
+.card, p, form {
     border: lightgrey solid 1px;
     border-radius: 5px;
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2),
@@ -26,13 +26,4 @@ body {
     padding: 3px;
     border: lightgrey solid 1px;
     margin-bottom: 5px;
-}
-
-textarea {
-    width: 100%;
-    height: 100%;
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-    box-sizing: border-box;         /* Opera/IE 8+ */
-    resize: none;
 }
